--- a/src/components/card/styles.scss
+++ b/src/components/card/styles.scss
@@ -157,6 +157,7 @@ h4.card-title {
     min-height: 44px;
     box-shadow: 0 1px 0 $gray-rgba-200, 0 -1px 0 $gray-400;
     border: none;
+    z-index: 2;
 
     & .btn-toggler {
       font-size: .875rem;
