--- a/src/components/list-group/styles.scss
+++ b/src/components/list-group/styles.scss
@@ -126,3 +126,63 @@
 .list-group-item-roles:last-child {
   border-bottom: none;
 }
+
+
+// Style for list-group-chat
+
+.list-group-chat {
+
+  & .list-group-item {
+    border-radius: 6px !important;
+    margin-bottom: .5rem !important;
+    background-color: $white;
+    border-bottom-left-radius: 0 !important;
+    padding-bottom: 0 !important;
+  }
+  & .list-group-chat-item-me {
+    border-bottom-right-radius: 0 !important;
+    border-bottom-left-radius: 6px !important;
+    background-color: $gray-400;
+    border-color: $gray-400 !important;
+  }
+  & .list-group-item::before {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-color: transparent $gray-700 transparent transparent;
+    content: '';
+    position: absolute;
+    left: -8px;
+    bottom: -1px;
+    border-width: 8px 8px 0 0;
+  }
+  & .list-group-item::after {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-color: transparent $white transparent transparent;
+    content: '';
+    position: absolute;
+    left: -6px;
+    bottom: 0;
+    border-width: 8px 8px 0 0;
+  }
+  & .list-group-chat-item-me::before {
+    border-color: transparent transparent transparent $gray-400;
+    left: auto;
+    right: -8px;
+    border-width: 8px 0 0 8px;
+  }
+  & .list-group-chat-item-me::after {
+    display: none;
+  }
+  & .list-group-item-heading {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    & small {
+      font-size: .625rem;
+    }
+  }
+}
